--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -33,6 +35,7 @@
             android:label="@string/title_activity_intro"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
 
     </application>
 
